[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Fonts/ARIBLK.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GUI/Game_UI/StartChasing_Bar.gd" type="Script" id=3]
[ext_resource path="res://scripts/GUI/Game_UI/NextMissile_Bar.gd" type="Script" id=4]
[ext_resource path="res://scripts/GUI/Game_UI/Game_UI.gd" type="Script" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Game_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.40894
margin_top = -1.68182
margin_right = 8.40894
margin_bottom = -1.68182
theme = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="CrateDelivered_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 25.0
margin_right = 50.0
margin_bottom = 100.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartChasing_Bar" type="ProgressBar" parent="."]
anchor_top = 0.015
anchor_right = 0.985
anchor_bottom = 0.06
margin_bottom = 1.90735e-06
max_value = 10.0
value = 10.0
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartChasing_Timer" type="Timer" parent="StartChasing_Bar"]
wait_time = 10.0
one_shot = true

[node name="NextMissile_Bar" type="ProgressBar" parent="."]
anchor_top = 0.08
anchor_right = 0.421
anchor_bottom = 0.13
value = 100.0
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextMissile_Timer" type="Timer" parent="NextMissile_Bar"]
wait_time = 5.0

[connection signal="timeout" from="StartChasing_Bar/StartChasing_Timer" to="StartChasing_Bar" method="_on_StartChasing_Timer_timeout"]
[connection signal="timeout" from="NextMissile_Bar/NextMissile_Timer" to="NextMissile_Bar" method="_on_NextMissile_Timer_timeout"]
